completamento sezione 8-esegui piu operazioni con dropbox business

--- a/index.html
+++ b/index.html
@@ -221,6 +221,46 @@
                 
             </div>
         </div>
+        <!-- sezione 8 -->
+        <div id="sez8">
+            <div id="cbigtitle">
+                <span>Esegui piu operazioni con dropbox business</span>
+             </div>
+           <div class="ss8">
+            <div class="card">
+                <img src="img/business-feature-switching-tools.png" alt="" class="business">
+                <span class="ctitle"><strong>Passa di menoo da uno strumento all'altro</strong></span>
+                <p class="cp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, laboriosam. Ducimus, omnis maiores suscipit velit qui, accusantium dolorem similique exercitationem recusandae magni officiis deserunt dicta inventore aperiam reiciendis a ratione!</p>
+            </div>
+            <div class="card">
+                <img src="img/business-feature-send-files-it.png" alt="" class="business">
+                <span class="ctitle"><strong>Passa di menoo da uno strumento all'altro</strong></span>
+                <p class="cp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, laboriosam. Ducimus, omnis maiores suscipit velit qui, accusantium dolorem similique exercitationem recusandae magni officiis deserunt dicta inventore aperiam reiciendis a ratione!</p>
+            </div>
+            <div class="card">
+                <img src="img/business-feature-coordinate-it.png" alt="" class="business">
+                <span class="ctitle"><strong>Passa di menoo da uno strumento all'altro</strong></span>
+                <p class="cp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, laboriosam. Ducimus, omnis maiores suscipit velit qui, accusantium dolorem similique exercitationem recusandae magni officiis deserunt dicta inventore aperiam reiciendis a ratione!</p>
+            </div>
+           </div>
+           <div class="ss8">
+            <div class="card">
+                <img src="img/business-feature-integrations-it.png" alt="" class="business">
+                <span class="ctitle"><strong>Passa di menoo da uno strumento all'altro</strong></span>
+                <p class="cp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, laboriosam. Ducimus, omnis maiores suscipit velit qui, accusantium dolorem similique exercitationem recusandae magni officiis deserunt dicta inventore aperiam reiciendis a ratione!</p>
+            </div>
+            <div class="card">
+                <img src="img/business-feature-multi-device.png" alt="" class="business">
+                <span class="ctitle"><strong>Passa di menoo da uno strumento all'altro</strong></span>
+                <p class="cp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, laboriosam. Ducimus, omnis maiores suscipit velit qui, accusantium dolorem similique exercitationem recusandae magni officiis deserunt dicta inventore aperiam reiciendis a ratione!</p>
+            </div>
+            <div class="card">
+                <img src="img/business-feature-security.png" alt="" class="business">
+                <span class="ctitle"><strong>Passa di menoo da uno strumento all'altro</strong></span>
+                <p class="cp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, laboriosam. Ducimus, omnis maiores suscipit velit qui, accusantium dolorem similique exercitationem recusandae magni officiis deserunt dicta inventore aperiam reiciendis a ratione!</p>
+            </div>
+           </div>
+        </div>
     </main>
     <footer></footer>
 </body>
