--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
              </ul>
           </div>
         </div>
-        <div id="spacer"></div>
     </header>
     <main>
         <!-- sezione 1 -->
@@ -271,8 +270,47 @@
             </div>
         </div>
         <!-- sezione 10 -->
-        <div>
-          <!-- la lascio per ultima per non bloccarmi -->
+        <div id="sez10">
+            <div id="ss10">
+              <div class="sss10">
+                  <div id="puzzle1">
+                      <img src="img/designit.svg" alt="" class="lg">
+                  </div>
+                  <div id="puzzle2">
+                       <img src="img/arizona_state_university.svg" alt="" class="lg">
+                  </div>
+                  <div id="puzzle3">
+                       <img src="img/university_of_florida.svg" alt="" class="lg">
+                  </div>
+                  <div id="puzzle4">
+                       <img src="img/topps.svg" alt="" class="lg">
+                  </div>
+              </div>
+              <div class="center" >
+                <img src="img/designit.svg" alt="" id="logc">
+                    <div id="line10"></div>
+                    <div id="para10">
+                      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, sed. Dolor minima cumque temporibus. Unde aliquam sunt iste magnam reprehenderit nisi, minus quam corrupti doloribus cum facere molestiae dolorum adipisci?</p>
+                      <br>
+                      <span>Lorem</span>
+                    </div>
+              </div>
+              <div class="sss10">
+                <div id="puzzle5">
+                    <img src="img/world_bicycle_relief.svg" alt="" class="lg">
+                </div>
+                <div id="puzzle6">
+                    <img src="img/hearst_corp.svg" alt="" class="lg">
+                </div>
+                <div id="puzzle7">
+                    <img src="img/lonely_planet.svg" alt="" class="lg">
+                </div>
+                <div id="puzzle8">
+                    <img src="img/designit.svg" alt="" class="lg">
+                </div>
+              </div>
+            </div>
+          
         </div>
         <!-- sezione 11 -->
         <div id="sez11">
